--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,6 @@ name: CI
 
 on:
   workflow_dispatch:
-    inputs:
-      branch:
-        description: 'Branch to create the image from'
-        required: true
-        type: string
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -22,11 +17,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.branch }}
+          ref: ${{ github.ref }}
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world! ${{ inputs.branch }}
+        run: echo Hello, world! ${{ github.head_ref }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
